5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1573_1330.log
== TEST (2019-03-27 10:47:27) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:48:14) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total, 2)
-- EXECUTION TIME:
0.237774
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:48:14) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total, 2)
-- EXECUTION TIME:
0.111855
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:48:15) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:48:44) 
-- CODE:
amigos = 6
conta = 250
total = (conta / amigos)
print(round(total, 2)
-- EXECUTION TIME:
0.137506
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:49:04) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total , 2)
-- EXECUTION TIME:
0.146975
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 5
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:49:06) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total , 2)
-- EXECUTION TIME:
0.148542
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 5
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:49:06) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total , 2)
-- EXECUTION TIME:
0.173566
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 5
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:49:07) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total , 2)
-- ERROR:
File "XXXX", line 5
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:49:14) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total,  2)
-- EXECUTION TIME:
0.213731
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 5
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:49:25) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total, 2))
-- EXECUTION TIME:
0.136126
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:51:01) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total, 2))
-- EXECUTION TIME:
0.171935
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:51:04) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:51:07) 
-- CODE:
amigos = 6
conta = 250
total = conta / amigos
print(round(total, 2))
-- EXECUTION TIME:
0.16171
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
